2008-12-03 Massimo Manghi <mxmanghi@apache.org>

    * doc/rivet.xml: document timestamp is generated with the 
    EXSLT datetime() function controlled through the <?dbtimestamp ...?>
    element. The timestamp now reflects the actual time when the xsl
    processor is run, instead of time when the svn commit is carried out.

    * doc/rivet.xsl: customization added to make a list of examples
    appear at the end of the table of contents.

    * doc/html/*.html: manual pages rebuilt and committed to repository

2008-11-21 Massimo Manghi <mxmanghi@apache.org>

    * doc/rivet.xml: file broken up into chunks containing the toplevel
    sections of the manual. For every file an xml entity was created.

    * doc/xml/*.xml: added xml files containing every toplevel section of
    the manual.

    * doc/Makefile.am: added dependency from xml/*.xml for html pages
    generation

2008-11-17 Karl Lehenbauer <karl@apache.org>
    * src/apache-2/TclWebapache.c: Make TclWeb_UploadChannel open the 
    uploaded file and make the file handle available through standard Tcl 
    mechanisms, removing OS depdendencies.

    Make TclWeb_UploadData access the uploaded file through standard
    Tcl mechanisms, making the uploaded data available and also removing
    OS dependencies.

    Add TclWeb_UploadTempname to get the name of the temp file the
    uploaded file was saved to.

    Include apr_strings.h to remove compiler warning of implicit
    definitions of apr_pstrdup and apr_psprintf as well as multiple
    warnings about casts to pointer from integer of different size.

    Force rsc->upload_files_to_var to be set, temporarily, pending figuring 
    out why the configuration directive to set that is not working.

    * src/apache-2/rivetCore.c: Check return from Tcl_GetIndexFromObj call 
    in "upload" command processing (Rivet_Upload command).  Return an error 
    when the subcommand (channel, save, data, exists, size, type, filename, 